crates/emulator/src/preprocessor/snapshots/z33_emulator__preprocessor__tests__condition_parse_error_test.snap
---
source: crates/emulator/src/preprocessor/mod.rs
expression: report
---
error: invalid condition syntax: found end of input expected any, '*', '/', '+', '-', '<', '>', '&', '|', '=', '!', or ')'
  ┌─ /invalid.S:2:5
  │
2 │ #if (1 + 5
  │     ^^^^^^
